# carolins-kasse

./: .gitignore  .jscpd.json  AGENTS.md  CLAUDE.md  KASSEN_UI.md  README.md  main.py  pyproject.toml
.claude/commands/: start.md
.claude/rules/: python.md
data/: kasse.db  products.db
dev/: ARCHITECTURE.md  ASSETS.md  ASSET_CATALOG.md  HANDOVER.md  PLAN.md  STATUS_REPORT.md  UI_SCREENS.md  WORKFLOW.md  concept.md  git-workflow.md  project-goal.md  setup-ideas.md
docs/: PI_SETUP.md
src/: __init__.py  constants.py
src/admin/: __init__.py  printables.py  server.py
src/admin/static/: admin.css
src/admin/templates/: base.html  debug.html  printables.html  products.html  recipes.html  users.html
src/components/: balance_bar.py  button.py  cart_item_row.py  checklist_item.py  checkout_receipt.py  icon_pay_button.py  insufficient_funds_popup.py  mixins.py  numpad.py  product_display.py  product_tile.py  scrollable_cart.py
src/scenes/: __init__.py  admin.py  base.py  cashier.py  checkout_mixin.py  login.py  manager.py  math_game.py  menu.py  mixins.py  picker.py  recipe.py  scan.py  start.py  test_scene.py
src/ui/: progress_bar.py  shell.py  texture.py
src/utils/: admin_runtime.py  assets.py  barcodes.py  cart.py  database.py  database_balance_adjustments.py  database_checkout.py  database_earnings.py  database_models.py  database_products.py  database_recipes.py  database_schema.py  database_sessions.py  database_transactions.py  database_users.py  earnings.py  filename.py  fonts.py  input.py  layout.py  math_generator.py  network.py  pi_system.py  state.py  text_utils.py
systemd/: carolins-install.service  carolins-kasse-backup.service  carolins-kasse-backup.timer  carolins-kasse-update.service  carolins-kasse.service
tests/: db_isolation.py  test_admin_safety.py  test_barcodes.py  test_cashier_feedback_components.py  test_checkout_mixin.py  test_database_smoke.py  test_kiosk_flow_input.py  test_main_lazy_imports.py  test_numpad_component.py  test_operation_scripts.py  test_pi_debug.py  test_pi_prepare_boot.py  test_pi_system.py  test_pi_update_script.py  test_recipe_scene.py  test_render_caching.py  test_scene_lifecycle.py  test_scrollable_cart_component.py  test_systemd_units.py
tests/fixtures/pi_update/app_tools/: pi_backup.sh
tests/fixtures/pi_update/fake_bin/: date  git  id  runuser  systemctl  uv
tests/fixtures/pi_update/venv_bin/: python
tools/: generate_barcodes.py  generate_printables.py  pi_backup.sh  pi_bootstrap.sh  pi_debug.py  pi_firstboot.sh  pi_prepare_boot.py  pi_update.sh  seed_database.py
